--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,13 +8,13 @@ version = "0.1.0"
 description = "Lightweight Python SDK for the LLMWise multi-model API (chat, compare, blend, judge, failover)."
 readme = "README.md"
 requires-python = ">=3.9"
-license = { text = "MIT" }
+license = "MIT"
+license-files = ["LICENSE"]
 authors = [{ name = "LLMWise" }]
 keywords = ["llm", "openai", "anthropic", "gateway", "routing", "failover", "orchestration"]
 classifiers = [
   "Development Status :: 3 - Alpha",
   "Intended Audience :: Developers",
-  "License :: OSI Approved :: MIT License",
   "Programming Language :: Python :: 3",
   "Programming Language :: Python :: 3 :: Only",
   "Programming Language :: Python :: 3.9",
@@ -38,3 +38,5 @@ package-dir = {"" = "src"}
 [tool.setuptools.packages.find]
 where = ["src"]
 
+[tool.setuptools.package-data]
+llmwise_sdk = ["py.typed"]
